--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
     <!-- Start landing -->
     <div class="landing">
-        <div class="overlay"></div> <!-- Gradient overlay -->
+        <div class="overlay"></div>
         <div class="landing-content">
-            <img src="img/Egypt.png" alt="Landing Image">
+            <img src="img/egypt.png" alt="Egypt Image">
             <div class="text-section">
                 <h3>Efficient & Sustainable Agri-Logistics for Egypt’s Farmers</h3>
                 <p>Reducing costs, saving environment, and connecting farmers to markets faster.</p>
