--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hasad</title>
-    <link rel="icon" type="image/png" href="img/tab-logo.png">
+    <link rel="icon" type="image/png" href="img/tab-logo.png" loading="lazy">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/services/service-4/assets/css/service-4.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.css">
+    <link rel="preload" href="font.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -16,7 +17,7 @@
         <div class="container">
             <!-- Logo -->
             <a class="navbar-brand" href="#">
-                <img src="img/logo.png" alt="Logo" width="48">
+                <img src="img/logo.png" alt="Logo" width="48" loading="lazy">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -184,28 +185,28 @@
                       <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top" title="" data-content="And here's some amazing content. It's very engaging. Right?" data-original-title="2004">
                           <div class="inner-circle"></div>
                           <p class="h6 mt-3 mb-1">Improve Your Business</p>
-                          <p class="h6 text-muted mb-0 mb-lg-0">AAAAAAAAA</p>
+                          <p class="h6 text-muted mb-0 mb-lg-0">Boost your brand’s value by adopting eco-friendly solutions that reduce waste and enhance market trust.</p>
                       </div>
                   </div>
                   <div class="timeline-step">
                       <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top" title="" data-content="And here's some amazing content. It's very engaging. Right?" data-original-title="2005">
                           <div class="inner-circle-green"></div>
                           <p class="h6 mt-3 mb-1" style="color: #00FF00;">Waste to Wonder</p>
-                          <p class="h6 text-muted mb-0 mb-lg-0">AAAAAAAAA</p>
+                          <p class="h6 text-muted mb-0 mb-lg-0">Transform unuseful materials into valuable products, supporting circular economy practices.</p>
                       </div>
                   </div>
                   <div class="timeline-step">
                       <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top" title="" data-content="And here's some amazing content. It's very engaging. Right?" data-original-title="2010">
                           <div class="inner-circle"></div>
                           <p class="h6 mt-3 mb-1">Connect With Customers</p>
-                          <p class="h6 text-muted mb-0 mb-lg-0">AAAAAAAAA</p>
+                          <p class="h6 text-muted mb-0 mb-lg-0">Build strong relationships with conscious consumers who value sustainability and innovation.</p>
                       </div>
                   </div>
                   <div class="timeline-step mb-0">
                       <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top" title="" data-content="And here's some amazing content. It's very engaging. Right?" data-original-title="2020">
                           <div class="inner-circle-green"></div>
                           <p class="h6 mt-3 mb-1" style="color: #00FF00;">Gain Your Profits</p>
-                          <p class="h6 text-muted mb-0 mb-lg-0">AAAAAAA</p>
+                          <p class="h6 text-muted mb-0 mb-lg-0">Maximize your returns while making a positive impact on the planet and your community.</p>
                       </div>
                   </div>
               </div>
