add services list-items

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                             Services
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-                            <li><a class="dropdown-item" href="#">________</a></li>
-                            <li><a class="dropdown-item" href="#">________</a></li>
-                            <li><a class="dropdown-item" href="#">________</a></li>
+                            <li><a class="dropdown-item" href="#">Shared Shipping</a></li>
+                            <li><a class="dropdown-item" href="#">Recycling</a></li>
+                            <li><a class="dropdown-item" href="#">Market Access</a></li>
                         </ul>
                     </li>
 
